update9 - 動作修正（認識が枠と一致しないため要調整）

--- a/index.html
+++ b/index.html
@@ -582,6 +582,7 @@ ZXingBrowser.BrowserMultiFormatReader.listVideoInputDevices()
 // 登録用スキャン検出
 function onDetected(result) {
   const code = result.getText();
+  console.log(code);
   if (!code) return;
 
   const existing = items.find(i => i.code === code);
